--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,15 +10,10 @@
 
 .img-top {
     
-    margin-top: 30px;
-    margin-bottom: 30px;
- 
-}
-
-.imgtop1{
-    
-    margin-left: 110px;
-    
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-right: 50px;
+    margin-left: 50px;
 }
 #portfolio{
     
