--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,90 +1,95 @@
+
+@media (min-width: 768px) {
+    .about {
+        margin-left: 12.333333%;
+    }
+}
+
 .navbar-default {
-    border-color: rgba(34,34,34,.05);
+    border-color: rgba(34, 34, 34, .05);
     font-family: 'Roboto';
 }
 
 .navbar-default .navbar-header .navbar-brand {
     text-transform: uppercase;
-    font-family: 'Raleway'; 
+    font-family: 'Raleway';
     font-weight: 600;
     font-size: 180%;
     color: darkturquoise;
 }
 
-#home{
-    
+#home {
     background-color: azure;
     padding-top: 50px;
     padding-right: 0px;
     padding-bottom: 50px;
     padding-left: 0px;
     align-content: center;
-  
 }
 
-#aboutme .container .col-md-3{
-    
+#aboutme .container .col-md-3 {
     background-color: #A0EAEF;
-    border-radius: 30px 30px 30px 30px;
+    border-radius: 30px;
     padding-top: 10px;
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 410px
-    
 }
 
-#aboutme .container .col-md-8{
-    
+#aboutme .container .col-md-8 {
     background-color: #A3FFE6;
-    border-radius: 30px 30px 30px 30px;
+    border-radius: 30px;
     padding-top: 10px;
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 410px
-    
 }
 
 .glyphicon {
     font-size: 30px;
-    
 }
 
-#mainNav{
-    
+#mainNav {
     background-color: floralwhite;
-    
 }
 
-#aboutme{
-    
+#aboutme {
     background-color: azure;
     padding-top: 50px;
     padding-right: 0px;
     padding-bottom: 50px;
     padding-left: 0px;
-    
 }
 
-#portfolio{
-    
+#portfolio {
     background-color: azure;
     padding-top: 50px;
     padding-right: 0px;
     padding-bottom: 50px;
     padding-left: 0px;
-    
 }
 
+#portfolio .col-lg-12 .section-heading {
+    background-color: tomato;
+    padding-bottom: 1px;
+    padding-top: px;
+    border-radius: 30px;
+}
 
+#contact .col-lg-12 .section-heading {
+    background-color: tomato;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 30px;
+}
 
-#contact{
-    
+#contact {
     background-color: azure;
     padding-top: 50px;
     padding-right: 0px;
     padding-bottom: 120px;
     padding-left: 0px;
-    
 }
 
 body {
@@ -94,6 +99,7 @@ body {
     margin-right: px;
     background-attachment: fixed;
 }
+
 .portfolio-item {
     margin-bottom: 25px;
 }
@@ -102,56 +108,77 @@ footer {
     margin: 20px 0;
 }
 
-
-h1 { font-family: 'Philisopher', serif;
+h1 {
+    font-family: 'Philisopher', serif;
     font-weight: 600;
     color: blanchedalmond;
 }
 
-h2 { font-family: 'Raleway', serif; font-weight: 400; }
-h3,h4,h5,h6{ font-family: 'Roboto', serif; font-weight: 100; }
-p { font-family: 'Roboto', serif; font-weight: 300; }
-
-.portfolio-item .item-inner{
-    margin:0 20px 20px 0;
-    text-align:center;
-    background:#fff;
-    padding:10px;
-    border-bottom:1px solid #e1e1e1;
+h2 {
+    font-family: 'Raleway', serif;
+    font-weight: 400;
 }
 
-.portfolio-item img{
-    width:100%;
-}
-.portfolio-item .portfolio-image{
-    position:relative;
-}
-.portfolio-item h5{
-    margin:0;
-    padding:10px 0 0 0;
-    white-space:nowrap;
-    text-overflow:ellipsis;
-    overflow:hidden;
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Roboto', serif;
+    font-weight: 100;
 }
 
-.portfolio-item .overlay{
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    opacity:0;
-    background-color:rgba(255,255,255,0.9);
-    text-align:center;
-    vertical-align:middle;
-    -webkit-transition:opacity 300ms;
-    -moz-transition:opacity 300ms;
-    -o-transition:opacity 300ms;
-    transition:opacity 300ms;
+p {
+    font-family: 'Roboto', serif;
+    font-weight: 300;
 }
 
-.portfolio-item .overlay .preview{position:relative;top:50%;display:inline-block;margin-top:-20px;}
+.portfolio-item .item-inner {
+    margin: 0 20px 20px 0;
+    text-align: center;
+    background: #fff;
+    padding: 10px;
+    border-bottom: 1px solid #e1e1e1;
+}
 
-.portfolio-item:hover 
+.portfolio-item img {
+    width: 100%;
+}
 
-.overlay{opacity:1;}
+.portfolio-item .portfolio-image {
+    position: relative;
+}
+
+.portfolio-item h5 {
+    margin: 0;
+    padding: 10px 0 0 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.portfolio-item .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: rgba(255, 255, 255, 0.9);
+    text-align: center;
+    vertical-align: middle;
+    -webkit-transition: opacity 300ms;
+    -moz-transition: opacity 300ms;
+    -o-transition: opacity 300ms;
+    transition: opacity 300ms;
+}
+
+.portfolio-item .overlay .preview {
+    position: relative;
+    top: 50%;
+    display: inline-block;
+    margin-top: -20px;
+}
+
+.portfolio-item:hover .overlay {
+    opacity: 1;
+}
