--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,20 @@
     font-family: 'Roboto';
 }
 
+.navbar-default .navbar-nav>li>a {
+    color: darkturquoise;
+}
+
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+    background-color: #977EBD;
+    color: #FFFFFF;
+}
+
+.nav>li>a {
+    position: relative;
+    display: block;
+    padding: 10px 40px;
+}
 .navbar-default .navbar-header .navbar-brand {
     text-transform: uppercase;
     font-family: 'Raleway';
@@ -69,14 +83,15 @@
     padding-left: 0px;
 }
 
-#portfolio .col-lg-12 .section-heading {
+#portfolio .col-lg-4 .section-heading {
     background-color: tomato;
-    padding-bottom: 1px;
-    padding-top: px;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-radius: 30px;
 }
 
-#contact .col-lg-12 .section-heading {
+#contact .col-lg-4 .section-heading {
     background-color: tomato;
     padding-left: 10px;
     padding-top: 10px;
@@ -132,53 +147,103 @@ p {
     font-weight: 300;
 }
 
-.portfolio-item .item-inner {
-    margin: 0 20px 20px 0;
+.headline{
+    
+    font-family: 'Philosopher', serif;
+    font-weight: 400;
+}
+
+/* hover effects */
+
+.item {
     text-align: center;
-    background: #fff;
-    padding: 10px;
-    border-bottom: 1px solid #e1e1e1;
-}
-
-.portfolio-item img {
-    width: 100%;
-}
-
-.portfolio-item .portfolio-image {
     position: relative;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px;
 }
 
-.portfolio-item h5 {
-    margin: 0;
-    padding: 10px 0 0 0;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+.item,
+.item-hover,
+.item-hover .mask,
+.item-img,
+.item-info {
+    width: 263px;
+    height: 472px;
+    border-radius: 13px;
+    position:relative;
+    z-index:1;
+    
 }
 
-.portfolio-item .overlay {
+.item-hover,
+.item-hover .mask,
+.item-img {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+}
+
+.item-type-line .item-hover {
+    z-index: 100;
+    -webkit-transition: all 300ms ease-out;
+    -moz-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
     opacity: 0;
-    background-color: rgba(255, 255, 255, 0.9);
+    cursor: pointer;
+    display: block;
+    text-decoration: none;
     text-align: center;
+}
+
+.item-type-line .item-info {
+    z-index: 10;
+    color: #ffffff;
+    display: table-cell;
     vertical-align: middle;
-    -webkit-transition: opacity 300ms;
-    -moz-transition: opacity 300ms;
-    -o-transition: opacity 300ms;
-    transition: opacity 300ms;
-}
-
-.portfolio-item .overlay .preview {
     position: relative;
-    top: 50%;
-    display: inline-block;
-    margin-top: -20px;
+    z-index: 5;
 }
 
-.portfolio-item:hover .overlay {
+.item-type-line .item-info .headline {
+    font-size: 20px;
+}
+
+.item-type-line .item-info .line {
+    height: 1px;
+    width: 0%;
+    margin: 15px auto;
+    background-color: #ffffff;
+    -webkit-transition: all 500ms ease-out;
+    -moz-transition: all 500ms ease-out;
+    -o-transition: all 500ms ease-out;
+    transition: all 500ms ease-out;
+}
+
+.item-type-line .item-info .date {
+    font-size: 12px;
+}
+
+.item-type-line .item-hover .mask {
+    background-color: #000;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+    filter: alpha(opacity=50);
+    opacity: 0.5;
+    z-index: 0;
+    
+}
+
+.item-type-line .item-hover:hover .line {
+    width: 40%;
+}
+
+.item-type-line .item-hover:hover {
     opacity: 1;
+}
+
+.item-img {
+    background-color: #7a548f;
+    z-index: 0;
 }
